k8s/smb/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: notiflex-api-preview
  namespace: notiflex
spec:
  type: ClusterIP
  selector:
    app: notiflex-api
  ports:
    - name: http
      appProtocol: http
      port: 8080
      targetPort: 8080
