k8s/smb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notiflex-api
  namespace: notiflex
spec:
  type: ClusterIP
  selector:
    app: notiflex-api
  ports:
    - port: 8080
      targetPort: 8080
